--- a/css/style.css
+++ b/css/style.css
@@ -165,16 +165,14 @@ img {
 /* ===========HERO================= */
 .hero {
   text-align: center;
+  margin: 0 auto;
   background-color: var(--main-background-color);
   padding: 200px 0;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1600px;
+  width: 1600px;
 }
 
 .hero-title {
@@ -362,6 +360,9 @@ img {
 .social-icon {
   fill: #afb1b8;
 }
+.social-icon-footer {
+  fill: #ffffff;
+}
 
 .social-link:hover,
 .social-link:focus {
@@ -529,6 +530,8 @@ img {
 .filter-btn:focus {
   background-color: var(--accent-color);
   color: var(--inverse-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .project {
   display: flex;
